<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Medical logo-->
    <ImageView
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/logo_margin_bottom"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:src="@drawable/medical_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Enter Name Field-->
            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quiz_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:layout_marginTop="@dimen/name_margin_top"
                android:hint="@string/nameField" />

            <!--Question #1 Code Starts here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/question_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:background="@drawable/back"
                android:padding="@dimen/question_textview_padding"
                android:text="@string/question1"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/ldl_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quiz_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ldl_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/quiz_margin_right"
                    android:text="@string/trueButton" />

                <RadioButton
                    android:id="@+id/ldl_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falseButton" />

            </RadioGroup>

            <!--Question #2 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/question_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:background="@drawable/back"
                android:padding="@dimen/question_textview_padding"
                android:text="@string/question2"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/hdl_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quiz_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/hdl_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/quiz_margin_right"
                    android:text="@string/trueButton" />

                <RadioButton
                    android:id="@+id/hdl_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falseButton" />

            </RadioGroup>

            <!--Question #3 Code Start Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/question_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:background="@drawable/back"
                android:padding="@dimen/question_textview_padding"
                android:text="@string/question3"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quiz_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/fad_diets_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerA" />

                    <CheckBox
                        android:id="@+id/calorie_deficit_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerB" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/body_wraps_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerC" />

                    <CheckBox
                        android:id="@+id/exercise_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerD" />
                </LinearLayout>
            </LinearLayout>

            <!--Question #4 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/question_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_right"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:background="@drawable/back"
                android:padding="@dimen/question_textview_padding"
                android:text="@string/question4"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quiz_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/rest_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerA" />

                    <CheckBox
                        android:id="@+id/gatorade_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerB" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/sugar_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerC" />

                    <CheckBox
                        android:id="@+id/protein_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerD" />
                </LinearLayout>
            </LinearLayout>

            <!--Question #5 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:background="@drawable/back"
                android:padding="@dimen/question_textview_padding"
                android:text="@string/question5"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ques_5_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quiz_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:hint="@string/ques5hint" />

            <!--Question #6 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:background="@drawable/back"
                android:padding="@dimen/question_textview_padding"
                android:text="@string/question6"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ques_6_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/last_question_margin_bottom"
                android:layout_marginLeft="@dimen/quiz_margin_left"
                android:layout_marginRight="@dimen/quiz_margin_right"
                android:hint="@string/ques6hint" />

            <!--Submit Quiz Button-->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/submit_button_margin_bottom"
                android:onClick="submitQuiz"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>